--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "aloopat",
+  "name": "portfolio",
   "version": "1.0.0",
   "description": "Portfolio website",
   "main": "index.js",
+  "homepage": "https://greenblue456.github.io/Portfolio/",
   "scripts": {
     "sass": "node-sass -w scss/ -o dist/css/ --recursive",
     "deploy": "gh-pages -d dist"
